# atelier

./: .dockerignore  .env.example  .gitignore  DOCKER_GUIDE.md  Dockerfile  Makefile  README.md  app.py  docker-compose.yml  docker_install_on_AWS.txt  eval_results.json  evaluate.py  goldens.json  main.py  pyproject.toml  qdrant_login_steps.md  requirements.txt  sessions.json
.github/workflows/: build.yml
artifacts/: goldens.json
backend/: btw_handler.py  demo_guard.py  eval_judge.py  keep_alive.py  llm_factory.py  paper_loader.py  persistence.py  rag_graph.py  transcript.py  usage_tracker.py  vector_store.py
pages/: 1_Evals.py  2_Transcript.py
